:bug: fix: overflow of the style
Tag uses in the module CSS file overflow to all files

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,27 @@
+h1, h2, span, p {
+  text-align: center;
+  line-height: 125%;
+}
+
+h1 {
+  font-size: var(--text-big);
+}
+
+h2 {
+  font-size: var(--text-medium);
+}
+
+p { 
+  font-size: var(--text-small);
+}
+
+button {
+  line-height: 125%;
+}
+
+input:focus, select:focus, button:focus {
+  outline: none;
+}
 
 .material-symbols-rounded {
     font-size: 32px;
